--- a/composer.json
+++ b/composer.json
@@ -62,5 +62,10 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "php artisan optimize",
+        "chmod -R 777 public/"
+    ]
 }
