--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "revolution/laravel-google-sheets": "^6.2"
+        "revolution/laravel-google-sheets": "^6.2",
+        "sheetdb/sheetdb-php": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
