--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
         "revolution/laravel-google-sheets": "^6.2",
         "sheetdb/sheetdb-php": "^1.0"
     },
