--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "matthewbdaly/laravel-azure-storage": "^2.0",
         "revolution/laravel-google-sheets": "^6.2",
-        "sheetdb/sheetdb-php": "^1.0"
+        "sheetdb/sheetdb-php": "^1.0",
+        "spatie/flysystem-dropbox": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
