--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
         "ln -sr storage/app/public public/storage",
         "php artisan clear-compiled",
         "php artisan optimize",
-        "chmod -R 777 public/"    
+        "chmod -R 777 public/",
+        "chmod +x /node_modules/vite"    
     ]
 }
