--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,6 @@
         "php artisan clear-compiled",
         "php artisan optimize",
         "chmod -R 777 public/",
-        "chmod +x /node_modules/vite"    
+        "chmod +x /app/node_modules/.bin/vue-cli-service"    
     ]
 }
